Removed some template stuff and fixed nav-menu

--- a/Surfvejr/Views/SurfSpots/Details.cshtml
+++ b/Surfvejr/Views/SurfSpots/Details.cshtml
@@ -11,26 +11,26 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.name)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.name)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.latitude)
+            @Html.DisplayNameFor(model => model.Latitude)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.latitude)
+            @Html.DisplayFor(model => model.Latitude)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.longitude)
+            @Html.DisplayNameFor(model => model.Longitude)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.longitude)
+            @Html.DisplayFor(model => model.Longitude)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
