--- a/Surfvejr/Views/SurfSpots/Delete.cshtml
+++ b/Surfvejr/Views/SurfSpots/Delete.cshtml
@@ -12,27 +12,27 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.name)
+            @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.name)
+            @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.latitude)
+            @Html.DisplayNameFor(model => model.Latitude)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.latitude)
+            @Html.DisplayFor(model => model.Latitude)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.longitude)
+            @Html.DisplayNameFor(model => model.Longitude)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.longitude)
+            @Html.DisplayFor(model => model.Longitude)
         </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="id" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
