--- a/Surfvejr/Views/SurfSpots/Edit.cshtml
+++ b/Surfvejr/Views/SurfSpots/Edit.cshtml
@@ -12,21 +12,21 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="id" />
+            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="name" class="control-label"></label>
-                <input asp-for="name" class="form-control" />
-                <span asp-validation-for="name" class="text-danger"></span>
+                <label asp-for="Name" class="control-label"></label>
+                <input asp-for="Name" class="form-control" />
+                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="latitude" class="control-label"></label>
-                <input asp-for="latitude" class="form-control" />
-                <span asp-validation-for="latitude" class="text-danger"></span>
+                <label asp-for="Latitude" class="control-label"></label>
+                <input asp-for="Latitude" class="form-control" />
+                <span asp-validation-for="Latitude" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="longitude" class="control-label"></label>
-                <input asp-for="longitude" class="form-control" />
-                <span asp-validation-for="longitude" class="text-danger"></span>
+                <label asp-for="Longitude" class="control-label"></label>
+                <input asp-for="Longitude" class="form-control" />
+                <span asp-validation-for="Longitude" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
