Error messages and minor perfomance stuff for EF methods.

--- a/Surfvejr/Views/Home/index.cshtml
+++ b/Surfvejr/Views/Home/index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -41,7 +40,7 @@
         <div class="hero-container">
             <h1>Spot me surf-bro</h1>
             <h2>Don't take this seriously</h2>
-            <a href="#about" class="btn-get-started scrollto">Find Surf Spot</a>
+            <a href="SurfSpots" class="btn-get-started scrollto">Find Surf Spot</a>
         </div>
     </section><!-- #hero -->
 
