--- a/Surfvejr/Views/SurfSpots/Details.cshtml
+++ b/Surfvejr/Views/SurfSpots/Details.cshtml
@@ -4,71 +4,100 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-<div>
-    <h4>SurfSpot</h4>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Latitude)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Latitude)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Longitude)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Longitude)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SpotData)
-        </dt>
-        <dd class="col-sm-10">
-            <table class="table">
-                <tr>
-                    <th>Spot data ID</th>
-                    <th>Time of data</th>
-                    <th>Wave height</th>
-                    <th>Wave period</th>
-                    <th>Windspeed</th>
-                    <th>Sea temperature</th>
-                </tr>
-                @foreach (var item in Model.SpotData)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Id)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.TimeOfData)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.WaveHeight)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.WavePeriod)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.WindSpeed)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.SeaTemp)
-                        </td>
-                    </tr>
-                }
-            </table>
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+        <title>Surfs Up!</title>
+        <meta content="" name="descriptison">
+        <meta content="" name="keywords">
+
+        <!-- Favicons -->
+        <link href="img/favicon.png" rel="icon">
+        <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
+
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Lato:400,300,700,900" rel="stylesheet">
+
+        <!-- Vendor CSS Files -->
+        <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="vendor/icofont/icofont.min.css" rel="stylesheet">
+        <link href="vendor/venobox/venobox.css" rel="stylesheet">
+        <link href="vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+        <!-- Main CSS File -->
+        <link href="css/style.css" rel="stylesheet">
+
+    </head>
+    <body>
+        <h1>Details</h1>
+
+        <div>
+            <h4>SurfSpot</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Name)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Name)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Latitude)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Latitude)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Longitude)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Longitude)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.SpotData)
+                </dt>
+                <dd class="col-sm-10">
+                    <table class="table">
+                        <tr>
+                            <th>Spot data ID</th>
+                            <th>Time of data</th>
+                            <th>Wave height</th>
+                            <th>Wave period</th>
+                            <th>Windspeed</th>
+                            <th>Sea temperature</th>
+                        </tr>
+                        @foreach (var item in Model.SpotData)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.Id)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.TimeOfData)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.WaveHeight)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.WavePeriod)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.WindSpeed)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.SeaTemp)
+                                </td>
+                            </tr>
+                        }
+                    </table>
+                </dd>
+            </dl>
+        </div>
+        <div>
+            <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+            <a asp-action="Index">Back to List</a>
+        </div>
+    </body>
+</html>
