--- a/Surfvejr/Views/Shared/_Layout.cshtml
+++ b/Surfvejr/Views/Shared/_Layout.cshtml
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="~/css/style.css" rel="stylesheet"/>
 </head>
 <body>
-    <header>
-        <nav class="nav-menu nav-menu-expand-sm nav-menu-toggleable-sm nav-menu-light bg-white border-bottom box-shadow mb-3">
+    <header class="border-bottom">
+        <nav class="nav-menu nav-menu-expand-sm nav-menu-toggleable-sm nav-menu-light bg-white mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://i.fbcd.co/products/original/b92ba8fdf990b0aa49788ab86d29c45cb42a2e923b95dfdee6fa103b3e82163f.jpg" alt="SurfsUp" style="width:90px;height:60px;"></a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="SurfSpots" asp-action="Index">Surf Spots</a>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Map">Map</a>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reviews">Reviews</a>
-                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                <div class="d-sm-inline-flex">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://i.fbcd.co/products/original/b92ba8fdf990b0aa49788ab86d29c45cb42a2e923b95dfdee6fa103b3e82163f.jpg" alt="SurfsUp" style="width:90px;height:60px;"></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                            aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="SurfSpots" asp-action="Index">Surf Spots</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Map">Map</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reviews">Reviews</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                 </div>
             </div>
         </nav>
