Added Login (Authentication and Authorization)

--- a/Surfvejr/Views/Shared/_Layout.cshtml
+++ b/Surfvejr/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
         <nav class="nav-menu nav-menu-expand-sm nav-menu-toggleable-sm nav-menu-light bg-white mb-3">
             <div class="container">
                 <div class="d-sm-inline-flex">
+                    <partial name="_LoginPartial" />
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://i.fbcd.co/products/original/b92ba8fdf990b0aa49788ab86d29c45cb42a2e923b95dfdee6fa103b3e82163f.jpg" alt="SurfsUp" style="width:90px;height:60px;"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
