--- a/Surfvejr/Views/Shared/_Layout.cshtml
+++ b/Surfvejr/Views/Shared/_Layout.cshtml
@@ -11,18 +11,22 @@
         <nav class="nav-menu nav-menu-expand-sm nav-menu-toggleable-sm nav-menu-light bg-white mb-3">
             <div class="container">
                 <div class="d-sm-inline-flex">
-                    <partial name="_LoginPartial" />
                     <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="https://i.fbcd.co/products/original/b92ba8fdf990b0aa49788ab86d29c45cb42a2e923b95dfdee6fa103b3e82163f.jpg" alt="SurfsUp" style="width:90px;height:60px;"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="SurfSpots" asp-action="Index">Surf Spots</a>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Map">Map</a>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reviews">Reviews</a>
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="SurfSpots" asp-action="Index">Surf Spots</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Map">Map</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Reviews">Reviews</a>
+                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
+
+
                 </div>
+            </div>
+            <div class="icofont-login" style="text-align: right;">
+                <partial name="_LoginPartial" />
             </div>
         </nav>
     </header>
