--- a/Surfvejr/Views/SurfSpots/Index.cshtml
+++ b/Surfvejr/Views/SurfSpots/Index.cshtml
@@ -35,7 +35,7 @@
 </head>
 
 <body>
-    <h1>Index</h1>
+    <h1>Find surf spot</h1>
     <div class="container">
         <!--The div element for the map -->
         <div id="map"></div>
