--- a/Surfvejr/Views/Home/index.cshtml
+++ b/Surfvejr/Views/Home/index.cshtml
@@ -38,8 +38,8 @@
     <!-- ======= Hero Section ======= -->
     <section id="hero">
         <div class="hero-container">
-            <h1>Spot me surf-bro</h1>
-            <h2>Don't take this seriously</h2>
+            <h1>Find the perfect surf spot</h1>
+            <h2>You will be able to see whatever surf spot that is best for you.</h2>
             <a href="SurfSpots" class="btn-get-started scrollto">Find Surf Spot</a>
         </div>
     </section><!-- #hero -->
@@ -52,7 +52,7 @@
             <div class="container">
 
                 <div class="section-title">
-                    <h2>About Us</h2>
+                    <h2>Lorem ipsum</h2>
                 </div>
 
                 <div class="row">
@@ -89,7 +89,7 @@
     <footer id="footer">
         <div class="container">
             <div class="copyright">
-                &copy; Copyright <strong><span>SurfsUp</span></strong>. All Rights Reserved
+                &copy; Copyright <strong><span>SurfsUp 2020</span></strong>. All Rights Reserved
             </div>
         </div>
     </footer><!-- End #footer -->
