--- a/Surfvejr/Views/SurfSpots/Create.cshtml
+++ b/Surfvejr/Views/SurfSpots/Create.cshtml
@@ -3,7 +3,21 @@
 @{
     ViewData["Title"] = "Create";
 }
+<!-- Favicons -->
+<link href="img/favicon.png" rel="icon">
+<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Lato:400,300,700,900" rel="stylesheet">
+
+<!-- Vendor CSS Files -->
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="vendor/icofont/icofont.min.css" rel="stylesheet">
+<link href="vendor/venobox/venobox.css" rel="stylesheet">
+<link href="vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+<!-- Main CSS File -->
+<link href="css/style.css" rel="stylesheet">
 <h1>Create</h1>
 
 <h4>SurfSpot</h4>
